# ChangeLog for www-apps/froxlor
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*froxlor-0.9.13 (27 Sep 2010)

  27 Sep 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.12.ebuild, +froxlor-0.9.13.ebuild:
  version bump, remove old

  24 Sep 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild:
  added php.ini for Froxlors own vhost

  03 Sep 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.12.ebuild, froxlor-9999.ebuild:
  fix typo, thanks to Emilien

*froxlor-0.9.12 (23 Aug 2010)

  23 Aug 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.11.ebuild, +froxlor-0.9.12.ebuild:
  version bump, remove old

  09 Aug 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild, metadata.xml:
  add pureftpd support, fix disabling inserttask statement when bind useflag
  is not set

*froxlor-0.9.11 (26 Jul 2010)

  26 Jul 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.10.ebuild, +froxlor-0.9.11.ebuild:
  version bump

  15 Jul 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild:
  remove conditional dependency on dovecot 1.1 as per gentoo security bug
  #314533

  29 Jun 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.10.ebuild, froxlor-9999.ebuild:
  depend on virtual/cron instead of vixie-cron, thanks to marienz

*froxlor-0.9.10 (28 Jun 2010)

  28 Jun 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.9.ebuild, +froxlor-0.9.10.ebuild:
  version bump

*froxlor-0.9.9 (14 Jun 2010)

  14 Jun 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.8.ebuild, +froxlor-0.9.9.ebuild:
  version bump

  10 Jun 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.8.ebuild, froxlor-9999.ebuild:
  added USE-flag ftpquota to enable/disable quota in proftpd

  09 Jun 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.8.ebuild, froxlor-9999.ebuild:
  some fixes in pkg_config phase
