@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*froxlor-0.9.13.1 (01 Oct 2010)
+
+  01 Oct 2010; Froxlor Release Team <release@froxlor.org>
+  -froxlor-0.9.13.ebuild, +froxlor-0.9.13.1.ebuild, froxlor-9999.ebuild:
+  version bump, remove old
+
 *froxlor-0.9.13 (27 Sep 2010)
 
   27 Sep 2010; Froxlor Release Team <release@froxlor.org>
